2001-02-27  Per Bothner  <per@bothner.com>

	* module1.scm:  New module, to test separate compilation.
	* obj-test.scm:  Some extra tests, including require of module1.
	* Makefile.am:  Update to compile and use module1.

2000-09-21  Per Bothner  <per@bothner.com>

	* num-test.scm:  New remainder test, from brlewis@alum.mit.edu.

2000-08-16  Per Bothner  <per@bothner.com>

	* obj-test.scm:  New test for name clashes in compiled code.

2000-06-25  Per Bothner  <per@bothner.com>

	* ppfile.out:  Fix expected output.

2000-06-19  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST):  New variable, for ppfile.out.
	(SOURCES):  Addes scribble.com.

2000-06-18  Per Bothner  <per@bothner.com>

	* misc-test.scm:  New tests for make-procedure and properties.

2000-06-09  Per Bothner  <per@bothner.com>

	* Makefile.am (check1):  Always at least compile scribbe.scm.

2000-06-09  Bruce Lewis  <brlewis@alum.mit.edu>

	* misc-test.scm:  Two new read-line tests.

2000-05-28  Per Bothner  <per@bothner.com>

	* Makefile.am (check-ppfile):  New test, for slib/ppfile.scm.
	* ppfile.out:  New file - expected output from ppfile.

	* misc-test.scm (test-alias-5):  New testcase.

	* num-test.scm:  Added two gcd regression tests.

2000-04-14  Per Bothner  <per@bothner.com>

	* obj-test.scm: Added 4 tests for record with names that need mangling.

2000-02-29  Per Bothner  <per@bothner.com>

	* misc-test.scm (test-nesting-3):  New test, triggers bug reported
	by Bruce R. Lewis; now fixed.

2000-02-25  Per Bothner  <per@bothner.com>

	* misc-test.scm:  Added two more tests for #!optional.

2000-02-12  Per Bothner  <per@bothner.com>

	* scribble.scm:  New "applet" testcase.
	* scribble.html:  Web page that uses scribble applet.
	* Makefile.am (scribble.class, check-scribble):  New rules.

2000-01-23  Per Bothner  <per@bothner.com>

	* misc-test.scm:  Added tests for call-with-values and values.

2000-01-22  Per Bothner  <per@bothner.com>
