@@ -1,3 +1,8 @@
+2001-02-28  Per Bothner  <per@bothner.com>
+
+	* module1.scm (classify):  New procedure, used to cause VerifyError.
+	* obj-test.scm:  Call classify and test it.
+
 2001-02-27  Per Bothner  <per@bothner.com>
 
 	* module1.scm:  New module, to test separate compilation.
